<resources>
    <string name="app_name">爱默IT面试题库</string>
    <string name="text_topic">题目</string>
    <string name="text_search">搜索</string>
    <string name="text_show_answer">显示答案</string>
    <string name="text_hidden_answer">隐藏答案</string>
    <string name="text_detailed">详解</string>
    <string name="text_show_url">www.lovemo.club</string>
    <string name="text_job">按工作岗位</string>
    <string name="text_language_software">按语言或软件</string>
    <string name="text_feedback">反馈</string>
    <string name="text_software_feedback">意见反馈</string>
    <string name="text_collection">收藏</string>
    <string name="text_submit">提交</string>
    <string name="text_no_data">无数据</string>
    <string name="text_no_answer">无答案</string>
    <string name="text_login">登录</string>
    <string name="text_reg">注册</string>
    <string name="text_password_reset">重置密码</string>
    <string name="text_input_username">请输入账号(3~30位)</string>
    <string name="text_input_password">请输入密码</string>
    <string name="text_input_old_password">请输入当前密码</string>
    <string name="text_input_new_password">请输入新密码</string>
    <string name="text_input_password2">请输入确认密码</string>
    <string name="text_input_email">请输入邮箱地址</string>
    <string name="text_more">更多</string>
    <string name="text_reset_password">修改密码</string>
    <string name="text_reset_email">修改邮箱</string>
    <string name="text_about">关于软件</string>
    <string name="text_log_out">退出登录</string>
    <string name="text_statement_info">本软件中所有资源来源于网络，如有异议请发送邮件至lovemoclub@163.com，我们将在第一时间处理。</string>
    <string name="text_statement">声明</string>
    <string name="text_about_info">一、本软件中所有资源来源于网络，如有异议请发送邮件至lovemoclub@163.com，我们将在第一时间处理。\n二、本软件主要用于方便IT工作者实时补充知识，因软件中资源由开发者网络搜集，可能存在错误，大家可通过反馈按钮进行反馈，我们将在第一时间处理，请大家不要过于相信答案准确性。</string>
    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_close">关闭</string>
    <string name="text_no_show">不再显示</string>
    <string name="text_send">发送</string>
    <string name="text_out">退出</string>
    <string name="text_account_not_activated">账号未激活</string>
    <string name="text_is_reset_account">是否要重置账号：</string>
    <string name="text_de_password">的密码？</string>
    <string name="text_sending_email">正在发送邮件至该账号绑定邮箱，请稍后....</string>
    <string name="text_splash_account">账号：</string>
    <string name="text_splash_activated"> 未激活，请到邮箱进行激活操作。\n未收到邮件或邮件已过期？\n点击发送按钮重新发送激活邮件！\n如已激活，请点击登录按钮跳转至登录页面登录！</string>
    <string name="text_splash_email_send_success">请求发送验证邮件成功，请到 </string>
    <string name="text_splash_email_send_success_activated">邮箱中进行激活。</string>
    <string name="text_splash_need_to_access">需要文件读写权限进行文件下载及获取电话状态权限！</string>
    <string name="text_splash_open_the_necessary_permissions">是否进入应用信息开启必要权限？</string>
    <string name="text_splash_send_email_error">请求发送验证邮箱邮件失败！</string>
    <string name="text_no_network">网络不可用,请检查您的网络！</string>
    <string name="text_logging">正在登录，请稍后....</string>
    <string name="text_is_registered">正在注册，请稍后....</string>
    <string name="text_been_great">您已经赞过了！</string>
    <string name="text_thumb_success">点赞成功</string>
    <string name="text_thumb">点赞</string>
    <string name="text_cancel_collection_success">取消收藏成功</string>
    <string name="text_collection_success">收藏成功</string>
    <string name="text_collection_failure">收藏失败</string>
    <string name="text_source">跳转至来源网页</string>
    <string name="text_down_refresh">下拉刷新</string>
    <string name="text_loosen_refresh">松开刷新</string>
    <string name="text_refreshing">正在刷新....</string>
    <string name="text_loading">加载中....</string>
    <string name="text_time">最后刷新时间:2017&#8211;04&#8211;25 17:07:07</string>
    <string name="text_final_refresh_time">最后刷新时间:</string>

</resources>
