<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_color">

    <RelativeLayout
        android:id="@+id/reg_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splash">
        <android.support.v7.widget.Toolbar
            android:id="@+id/reg_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/splash"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" >

        <TextView
            android:id="@+id/reg_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_reg"
            android:textColor="@color/text_colors"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:layout_alignParentTop="true" />

        </android.support.v7.widget.Toolbar>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/reg_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_relative"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </LinearLayout>

        <EditText
            android:id="@+id/et_reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="30"
            android:hint="@string/text_input_username"
            android:padding="10dp"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_reg_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_input_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_reg_user_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_input_password2"
            android:inputType="textPassword"
            android:padding="10dp"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_reg_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/text_input_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp" />

    </LinearLayout>
            <LinearLayout
                android:scrollbars="horizontal"
                android:layout_below="@+id/reg_linear"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:id="@+id/login_linear2"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/reg_login"
                    android:text="@string/text_login"
                    android:background="@drawable/btn_selector"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="30dp"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/reg_reg"
                    android:text="@string/text_reg"
                    android:textSize="20sp"
                    android:background="@drawable/btn_selector"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content" />
            </LinearLayout>
</RelativeLayout>
