<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal">

    <EditText
        android:id="@+id/et_reset_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_input_old_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="20sp"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_reset_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_input_new_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:padding="10dp"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="16sp"
        android:maxLines="1"
        android:layout_below="@+id/et_reset_old_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/et_reset_new_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_input_password2"
        android:inputType="textPassword"
        android:maxLength="16"
        android:padding="10dp"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="16sp"
        android:maxLines="1"
        android:layout_below="@+id/et_reset_new_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
