<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_color">

    <RelativeLayout
        android:id="@+id/login_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splash">

        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/splash"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" >
        <TextView
            android:id="@+id/show_login_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_login"
            android:textColor="@color/text_colors"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:layout_alignParentTop="true" />
</android.support.v7.widget.Toolbar>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_relative"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf">
        </LinearLayout>

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/text_input_username"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_login_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/text_input_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="16sp" />
    </LinearLayout>
            <LinearLayout
                android:scrollbars="horizontal"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="28dp"
                android:id="@+id/login_linear2"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_linear"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <Button
                    android:id="@+id/login_reg"
                    android:text="@string/text_reg"
                    android:background="@drawable/btn_selector"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="30dp"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"
                    tools:ignore="ButtonStyle,RtlHardcoded" />
                <Button
                    android:id="@+id/login_login"
                    android:text="@string/text_login"
                    android:background="@drawable/btn_selector"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content"
                    tools:ignore="ButtonStyle,RtlHardcoded" />

            </LinearLayout>
            <TextView
                android:textColor="@color/text_colors"
                android:id="@+id/login_password_back"
                android:text="@string/text_password_reset"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded" />
</RelativeLayout>
