<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_color">

    <RelativeLayout
        android:id="@+id/user_center_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splash">

        <android.support.v7.widget.Toolbar
            android:id="@+id/user_center_toolbar"
            style="@style/NoSpaceActionBarTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/splash"
            android:theme="?attr/actionBarTheme">

            <TextView
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/darker_gray"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/show_user_center_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/app_name"
                android:textColor="@color/text_colors"
                android:textSize="22sp" />
        </android.support.v7.widget.Toolbar>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_center_relative2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_center_relative"
        android:background="@color/splash">

        <club.lovemo.questionbank.utils.CircleImageView
            android:id="@+id/user_center_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@mipmap/user_male"
            app:border_color="@color/white"
            app:border_width="2dp" />

        <TextView
            android:id="@+id/user_center_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_center_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_colors"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_center_relative_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1.5dp"
        android:background="@drawable/user_center_selector"
        android:layout_below="@+id/user_center_relative2">

        <TextView
            android:id="@+id/user_center_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/text_feedback"
            android:textColor="@color/text_colors"
            android:textSize="20sp" />

        <ImageView
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/right_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription=""
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_center_relative_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1.5dp"
        android:background="@drawable/user_center_selector"
        android:layout_below="@+id/user_center_relative_feedback">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/text_about"
            android:textColor="@color/text_colors"
            android:textSize="20sp" />
        <ImageView
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/right_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription=""
            tools:ignore="ContentDescription" />
    </RelativeLayout>

</RelativeLayout>
